backend/apis/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: tf-tutorial
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
spec:
  rules:
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 3000
          - path: /promotions
            pathType: Prefix
            backend:
              service:
                name: promotions-service
                port:
                  number: 8080
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: books-service
                port:
                  number: 3000
